--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://widget.battleforthenet.com/widget.js" async></script>
     <title>Jason Fukura</title>
 </head>
 <body>
